# ros_boilerplate

./: .travis.yml  CMakeLists.txt  README.md  package.xml
src/test/: TestWorker.cpp
uml/umlet/: activity_diagram.uxf  class_diagram.uxf
