<?xml version="1.0"?>
<package>
  <name>ros_boilerplate</name>
  <version>0.0.0</version>
  <description>Code base for catdog vehicle by Airgility Co.</description>
  <maintainer email="ashwin@airgility.co">Ashwin Varghese Kuruttukulam</maintainer>
  <author email="ashwin@airgility.co">Ashwin Varghese Kuruttukulam</author>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <test_depend>gtest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
